; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_plug_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_plug_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_queue = type { i64, i32 }

@QUEUE_FLAG_PLUGGED = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blk_plug_device(%struct.request_queue* %0) #0 {
  %2 = alloca %struct.request_queue*, align 8
  store %struct.request_queue* %0, %struct.request_queue** %2, align 8
  %3 = call i32 (...) @irqs_disabled()
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @WARN_ON(i32 %6)
  %8 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %9 = call i64 @blk_queue_stopped(%struct.request_queue* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %28

12:                                               ; preds = %1
  %13 = load i32, i32* @QUEUE_FLAG_PLUGGED, align 4
  %14 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %15 = call i32 @queue_flag_test_and_set(i32 %13, %struct.request_queue* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %28, label %17

17:                                               ; preds = %12
  %18 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %19 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %18, i32 0, i32 1
  %20 = load i64, i64* @jiffies, align 8
  %21 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %22 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %20, %23
  %25 = call i32 @mod_timer(i32* %19, i64 %24)
  %26 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %27 = call i32 @trace_block_plug(%struct.request_queue* %26)
  br label %28

28:                                               ; preds = %11, %17, %12
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @irqs_disabled(...) #1

declare dso_local i64 @blk_queue_stopped(%struct.request_queue*) #1

declare dso_local i32 @queue_flag_test_and_set(i32, %struct.request_queue*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @trace_block_plug(%struct.request_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
